--- a/tti2sdk/src/main/res/layout/activity_missions.xml
+++ b/tti2sdk/src/main/res/layout/activity_missions.xml
@@ -40,15 +40,72 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/labelMissions"
-        android:text="Missions"
-        android:textSize="40sp"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginBottom="20dp"
+        android:orientation="vertical"
+        android:id="@+id/scrollMissions"
+        app:layout_constraintTop_toBottomOf="@id/containerTopButtons"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <include
+                android:id="@+id/headerEvents"
+                layout="@layout/sub_header_event" />
+
+            <include
+                android:id="@+id/eventLineOne"
+                layout="@layout/item_line_event_one" />
+
+            <include
+                android:id="@+id/eventLineTwo"
+                layout="@layout/item_line_event_two" />
+
+            <include
+                android:id="@+id/headerDaily"
+                layout="@layout/sub_header_daily" />
+
+            <include
+                android:id="@+id/dailyLineOne"
+                layout="@layout/item_line_daily_one" />
+
+            <include
+                android:id="@+id/dailyLineTwo"
+                layout="@layout/item_line_daily_two" />
+
+            <include
+                android:id="@+id/dailyLineThree"
+                layout="@layout/item_line_daily_three" />
+
+            <include
+                android:id="@+id/dailyLineFour"
+                layout="@layout/item_line_daily_four" />
+
+            <include
+                android:id="@+id/headerProgress"
+                layout="@layout/sub_header_progress" />
+
+            <include
+                android:id="@+id/progressLineOne"
+                layout="@layout/item_line_progress_one" />
+
+            <include
+                android:id="@+id/headerBoosters"
+                layout="@layout/sub_header_boosters" />
+
+            <include
+                android:id="@+id/boostersLineOne"
+                layout="@layout/item_line_booster_one" />
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
