--- a/tti2sdk/src/main/res/layout/fragment_home.xml
+++ b/tti2sdk/src/main/res/layout/fragment_home.xml
@@ -14,6 +14,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <app.rive.runtime.kotlin.RiveAnimationView
+        android:id="@+id/map"
+        android:layout_width="match_parent"
+        android:layout_height="260dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/topHome"
+        app:riveFit="FILL" />
+
     <TextView
         android:id="@+id/text"
         android:layout_width="wrap_content"
