--- a/tti2sdk/src/main/res/layout/activity_avatar.xml
+++ b/tti2sdk/src/main/res/layout/activity_avatar.xml
@@ -114,11 +114,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/containerTopButtons">
 
-        <!-- app.rive.runtime.kotlin.RiveAnimationView -->
-        <View
-            android:id="@+id/avatar"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+        <include
+            android:id="@+id/progressBarAvatar"
+            layout="@layout/loading_default"
+            android:layout_width="68dp"
+            android:layout_height="68dp"
             android:layout_marginStart="30dp"
             android:layout_marginTop="30dp"
             android:layout_marginEnd="30dp"
@@ -126,8 +126,23 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <!-- app.rive.runtime.kotlin.RiveAnimationView -->
+        <app.rive.runtime.kotlin.RiveAnimationView
+            android:id="@+id/avatar"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginBottom="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:riveFit="FILL" />
+            app:riveFit="FILL"
+            app:riveResource="@raw/avatar" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
