--- a/tti2sdk/src/main/res/layout/activity_help.xml
+++ b/tti2sdk/src/main/res/layout/activity_help.xml
@@ -173,7 +173,7 @@
             android:layout_marginEnd="307dp"
             android:layout_marginTop="32dp"
             android:layout_marginBottom="640dp"
-            android:background=""
+            android:background="@null"
             android:text="@string/txt_help_Skip"
             android:textSize="11sp"
             android:textAllCaps="false"
@@ -184,7 +184,7 @@
 
         <Button
             android:id="@+id/helpRulesAndPrizes"
-            android:background=""
+            android:background="@null"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
