--- a/tti2sdk/src/main/res/layout/activity_help.xml
+++ b/tti2sdk/src/main/res/layout/activity_help.xml
@@ -200,4 +200,33 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/helpTabLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="729dp"
+        android:layout_marginBottom="65dp"
+        android:layout_marginStart="142dp"
+        android:layout_marginEnd="142dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:tabGravity="center"
+        app:tabMode="scrollable"
+        app:tabSelectedTextColor="@null"
+        app:tabIndicator="@null"
+        android:paddingStart="6dp"
+        android:paddingEnd="6dp"
+        android:background="@drawable/help_tab_selector_carousel"/>
+
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/helpViewPager"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
