--- a/tti2sdk/src/main/res/layout/activity_destination.xml
+++ b/tti2sdk/src/main/res/layout/activity_destination.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    tools:context=".ui.destinations.DestinationActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/containerToolbarDestinations"
@@ -43,15 +44,15 @@
             android:id="@+id/btnShareDestination"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:clickable="true"
-            android:focusable="true"
             android:background="?attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
             android:contentDescription="@string/img_content_description"
+            android:focusable="true"
             android:paddingHorizontal="20dp"
             android:src="@drawable/ic_share"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -82,99 +83,231 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
     
     <ScrollView
+        android:id="@+id/containerDestination"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:id="@+id/containerDestination"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/containerToolbarDestinations"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/containerToolbarDestinations">
         
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/containerImg"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/containerImg">
+            android:layout_height="wrap_content">
             
             <ImageView
+                android:id="@+id/imgMainDestination"
                 android:layout_width="match_parent"
                 android:layout_height="240dp"
-                android:src="@drawable/img_destination_default"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
-                android:id="@+id/imgMainDestination"
-                app:layout_constraintTop_toTopOf="parent"
+                android:src="@drawable/img_destination_default"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent"/>
 
             <View
+                android:id="@+id/viewBorder"
                 android:layout_width="80dp"
                 android:layout_height="4dp"
-                android:id="@+id/viewBorder"
                 android:layout_marginTop="14dp"
                 android:background="@color/gray_divider"
-                app:layout_constraintTop_toBottomOf="@id/imgMainDestination"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                app:layout_constraintTop_toBottomOf="@id/imgMainDestination"/>
 
             <TextView
+                android:id="@+id/txtTitleDescription"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/txtTitleDescription"
-                tools:text="Toba Lake"
-                android:textSize="28sp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="10dp"
                 android:maxLines="1"
                 android:textColor="@color/black"
-                android:layout_marginTop="20dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
-                app:layout_constraintTop_toBottomOf="@id/imgMainDestination"
+                android:textSize="28sp"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                app:layout_constraintTop_toBottomOf="@id/imgMainDestination"
+                tools:text="Toba Lake"/>
 
             <TextView
+                android:id="@+id/txtSubtitleDescription"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/txtSubtitleDescription"
-                tools:text="Trivia"
-                android:maxLines="1"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="10dp"
                 android:ellipsize="end"
+                android:maxLines="1"
+                android:textColor="@color/black"
                 android:textSize="22sp"
                 android:textStyle="bold"
-                android:textColor="@color/black"
-                android:layout_marginTop="12dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/txtTitleDescription"/>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/txtTitleDescription"
+                tools:text="Trivia"/>
 
             <TextView
+                android:id="@+id/txtDetailsDescription"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/txtDetailsDescription"
-                android:textSize="14sp"
-                tools:text="bla bla bla bla \nbla bla bla \nblablabla \nagora vai agora vai \nnao vai nao vai nai"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/txtSubtitleDescription"
                 android:layout_marginStart="10dp"
+                android:layout_marginTop="12dp"
                 android:layout_marginEnd="10dp"
-                android:layout_marginTop="12dp"/>
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/txtSubtitleDescription"
+                tools:text="bla bla bla bla \nbla bla bla \nblablabla \nagora vai agora vai \nnao vai nao vai nai"/>
 
             <TextView
                 android:id="@+id/txtLinkDestination"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="10dp"
                 android:ellipsize="end"
                 android:maxLines="2"
                 android:textColor="@color/blue_dark"
-                tools:text="http://en.wikipedia.org/wiki/lake_toba"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginTop="12dp"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/txtDetailsDescription"/>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/txtDetailsDescription"
+                tools:text="http://en.wikipedia.org/wiki/lake_toba"/>
+
+            <TextView
+                android:id="@+id/txtPrize"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="10dp"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:text="@string/txt_prize"
+                android:textColor="@color/black"
+                android:textSize="22sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/txtLinkDestination"
+                tools:text="Prize"/>
+
+            <TextView
+                android:id="@+id/btnAllPrizes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:background="@drawable/background_text_prizes"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:text="@string/btn_all_prizes"
+                android:textColor="@color/blue_progress"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/txtPrize"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/txtPrize"
+                tools:text="All Prizes > " />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvPrizes"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/txtPrize"
+                tools:itemCount="2"
+                tools:listitem="@layout/item_prize"/>
+
+            <TextView
+                android:id="@+id/txtAroundHere"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="10dp"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:text="@string/txt_around_here"
+                android:textColor="@color/black"
+                android:textSize="22sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/rvPrizes"
+                tools:text="Around Here"/>
+
+            <RadioGroup
+                android:id="@+id/radioGroupOptions"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:minHeight="40dp"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/txtAroundHere">
+
+                <RadioButton
+                    android:id="@+id/rdAll"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/background_rb_prize"
+                    android:button="@drawable/ic_all"
+                    android:paddingStart="10dp"
+                    android:text="@string/rd_prize_all"/>
+
+                <RadioButton
+                    android:id="@+id/rdFood"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/background_rb_prize"
+                    android:button="@drawable/ic_foods"
+                    android:paddingStart="10dp"
+                    android:text="@string/rd_prize_foods"/>
+
+                <RadioButton
+                    android:id="@+id/rdSights"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/background_rb_prize"
+                    android:button="@drawable/ic_sights"
+                    android:paddingStart="10dp"
+                    android:text="@string/rd_prizes_sights"/>
+
+                <RadioButton
+                    android:id="@+id/rdStays"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/background_rb_prize"
+                    android:button="@drawable/ic_stays"
+                    android:paddingStart="10dp"
+                    android:text="@string/rd_prizes_stays"/>
+
+            </RadioGroup>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvAroundHere"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/radioGroupOptions"
+                tools:itemCount="2"
+                tools:listitem="@layout/item_around_here"/>
             
         </androidx.constraintlayout.widget.ConstraintLayout>
         
